fix(hostname): and cert

--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -37,8 +37,8 @@
   },
   "global": {
     "environment": "vadcprod",
-    "hostname": "va.datacommons.io",
-    "revproxy_arn": "arn:aws:acm:us-east-1:663707118480:certificate/092a9df9-6b43-4e4f-bf37-2189a58f8478",
+    "hostname": "vpodc.org",
+    "revproxy_arn": "arn:aws:acm:us-east-1:663707118480:certificate/a8d0710c-f6b0-4e27-bb61-6d0ee353c4bd",
     "dictionary_url": "https://s3.amazonaws.com/dictionary-artifacts/vadictionary/0.4.0/schema.json",
     "portal_app": "gitops",
     "kube_bucket": "kube-vadcprod-gen3",
