--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -7,22 +7,23 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "quay.io/cdis/arborist:1.0.0",
+    "arborist": "quay.io/cdis/arborist:1.1.2",
     "arranger": "quay.io/cdis/arranger:1.0.3",
     "arranger-dashboard": "quay.io/cdis/arranger-dashboard:master",
     "arranger-adminapi": "quay.io/cdis/arranger-server:master",
     "aws-es-proxy": "abutaha/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2.4.0",
-    "indexd": "quay.io/cdis/indexd:1.0.10",
-    "peregrine": "quay.io/cdis/peregrine:1.0.2",
+    "fence": "quay.io/cdis/fence:2.5.14",
+    "indexd": "quay.io/cdis/indexd:1.1.0",
+    "peregrine": "quay.io/cdis/peregrine:1.0.7",
     "pidgin": "quay.io/cdis/pidgin:1.0.0",
     "revproxy": "quay.io/cdis/nginx:1.15.5-ctds",
-    "sheepdog": "quay.io/cdis/sheepdog:1.1.3",
-    "portal": "quay.io/cdis/data-portal:2.4.2",
+    "sheepdog": "quay.io/cdis/sheepdog:1.1.8",
+    "portal": "quay.io/cdis/data-portal:2.5.4",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
     "spark": "quay.io/cdis/gen3-spark:1.0.0",
-    "tube": "quay.io/cdis/tube:0.1.3"
+    "tube": "quay.io/cdis/tube:0.1.9",
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:0.0.4"
   },
   "arranger": {
     "project_id": "mickey_1",
@@ -44,6 +45,7 @@
     "kube_bucket": "kube-vadcprod-gen3",
     "logs_bucket": "logs-vadcprod-gen3",
     "sync_from_dbgap": "False",
+    "dispatcher_job_num": "10",
     "useryaml_s3path": "s3://cdis-gen3-users/vadcprod/user.yaml"
   },
   "canary": {
