--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -18,12 +18,13 @@
     "pidgin": "quay.io/cdis/pidgin:1.0.0",
     "revproxy": "quay.io/cdis/nginx:1.15.5-ctds",
     "sheepdog": "quay.io/cdis/sheepdog:1.1.8",
-    "portal": "quay.io/cdis/data-portal:2.5.4",
+    "portal": "quay.io/cdis/data-portal:feat_mickey-analysis",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
     "spark": "quay.io/cdis/gen3-spark:1.0.0",
     "tube": "quay.io/cdis/tube:0.1.9",
-    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:0.0.5"
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:0.0.5",
+    "sower": "quay.io/cdis/sower:feat_mickey"
   },
   "arranger": {
     "project_id": "mickey_1",
