--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -12,7 +12,7 @@
     "arranger-dashboard": "quay.io/cdis/arranger-dashboard:master",
     "arranger-adminapi": "quay.io/cdis/arranger-server:master",
     "aws-es-proxy": "abutaha/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2.7.0",
+    "fence": "quay.io/cdis/fence:2.7.1",
     "indexd": "quay.io/cdis/indexd:1.1.0",
     "peregrine": "quay.io/cdis/peregrine:1.0.9",
     "pidgin": "quay.io/cdis/pidgin:1.0.0",
@@ -35,7 +35,22 @@
     "es_index_name": "mickey"
   },
   "jupyterhub": {
-    "enabled": "yes"
+    "enabled": "yes",
+    "nb_storage_size": "250Gi",
+    "containers": [
+      {
+        "name": "Bioinfo - Python/R",
+        "cpu": 0.5,
+        "memory": "256M",
+        "image": "quay.io/occ_data/jupyternotebook:1.7.2"
+      },
+      {
+        "name": "Bioinfo - Python/R",
+        "cpu": 1.0,
+        "memory": "1024M",
+        "image": "quay.io/occ_data/jupyternotebook:1.7.2"
+      }
+    ]
   },
   "global": {
     "environment": "vadcprod",
