--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -49,6 +49,12 @@
         "cpu": 1.0,
         "memory": "1024M",
         "image": "quay.io/occ_data/jupyternotebook:1.7.2"
+      },
+      {
+        "name": "Bioinfo - Python/R",
+        "cpu": 8.0,
+        "memory": "15512M",
+        "image": "quay.io/occ_data/jupyternotebook:1.7.2"
       }
     ]
   },
