--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -24,7 +24,9 @@
     "spark": "quay.io/cdis/gen3-spark:1.0.0",
     "tube": "quay.io/cdis/tube:0.1.9",
     "ssjdispatcher": "quay.io/cdis/ssjdispatcher:0.0.5",
-    "sower": "quay.io/cdis/sower:feat_mickey"
+    "sower": "quay.io/cdis/sower:feat_mickey",
+    "wts": "quay.io/cdis/workspace-token-service:0.1.0",
+    "manifestservice": "quay.io/cdis/manifestservice:0.1.0"
   },
   "arranger": {
     "project_id": "mickey_1",
@@ -37,6 +39,7 @@
   "jupyterhub": {
     "enabled": "yes",
     "nb_storage_size": "250Gi",
+    "sidecar": "quay.io/cdis/gen3fuse-sidecar:0.1.2",
     "containers": [
       {
         "name": "Bioinfo - Python/R",
