--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -18,7 +18,7 @@
     "pidgin": "quay.io/cdis/pidgin:1.0.0",
     "revproxy": "quay.io/cdis/nginx:1.15.5-ctds",
     "sheepdog": "quay.io/cdis/sheepdog:1.1.8",
-    "portal": "quay.io/cdis/data-portal:2.10.0",
+    "portal": "quay.io/cdis/data-portal:2.11.2",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
     "spark": "quay.io/cdis/gen3-spark:1.0.0",
@@ -39,7 +39,7 @@
   "jupyterhub": {
     "enabled": "yes",
     "nb_storage_size": "250Gi",
-    "sidecar": "quay.io/cdis/gen3fuse-sidecar:0.1.2",
+    "sidecar": "quay.io/cdis/gen3fuse-sidecar:feat_clinical",
     "containers": [
       {
         "name": "Bioinfo - Python/R",
