--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -31,7 +31,7 @@
   "arranger": {
     "project_id": "mickey_1",
     "auth_filter_field": "auth_resource_path",
-    "auth_filter_node_types": ["patients"]
+    "auth_filter_node_types": ["patients", "file"]
   },
   "tube": {
     "es_index_name": "mickey"
