--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -23,7 +23,7 @@
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
     "spark": "quay.io/cdis/gen3-spark:1.0.0",
     "tube": "quay.io/cdis/tube:0.1.9",
-    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:0.0.5",
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:0.0.6",
     "sower": "quay.io/cdis/sower:feat_mickey",
     "wts": "quay.io/cdis/workspace-token-service:0.1.0",
     "manifestservice": "quay.io/cdis/manifestservice:0.1.0"
@@ -72,6 +72,11 @@
     "sync_from_dbgap": "False",
     "dispatcher_job_num": "10",
     "useryaml_s3path": "s3://cdis-gen3-users/vadcprod/user.yaml"
+  },
+  "ssjdispatcher": {
+    "job_images": {
+      "indexing": "quay.io/cdis/indexs3client:0.0.3"
+    }
   },
   "canary": {
     "default": 0
