--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -24,7 +24,7 @@
     "spark": "quay.io/cdis/gen3-spark:1.0.0",
     "tube": "quay.io/cdis/tube:0.1.9",
     "ssjdispatcher": "quay.io/cdis/ssjdispatcher:0.0.6",
-    "sower": "quay.io/cdis/sower:feat_mickey",
+    "sower": "quay.io/cdis/sower:0.1.0",
     "wts": "quay.io/cdis/workspace-token-service:0.1.0",
     "manifestservice": "quay.io/cdis/manifestservice:0.1.0"
   },
