--- a/vpodc.org/manifest.json
+++ b/vpodc.org/manifest.json
@@ -36,7 +36,7 @@
     "sidecar": {
       "cpu-limit": "1.0",
       "memory-limit": "256Mi",
-      "image": "quay.io/cdis/gen3fuse-sidecar:feat_c8",
+      "image": "quay.io/cdis/gen3fuse-sidecar:0.1.3-mickey",
       "env": {"NAMESPACE":"default", "HOSTNAME": "vpodc.org"},
       "args": [],
       "command": ["/bin/bash", "/sidecarDockerrun.sh"],
